--- a/app/src/main/res/layout/activity_pay_details.xml
+++ b/app/src/main/res/layout/activity_pay_details.xml
@@ -158,7 +158,29 @@
                         android:hint="cha@gmail.com"
                         android:textSize="16sp" />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
 
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight=".4"
+                        android:gravity="left"
+                        android:text="Meter Type"
+                        android:textColor="@android:color/black" />
+
+                    <TextView
+                        android:id="@+id/text_meter_type"
+                        android:layout_width="0dp"
+                        android:layout_height="40dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight=".6"
+                        android:gravity="center_vertical"
+                        android:hint="..."
+                        android:textSize="16sp" />
+                </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
