--- a/app/src/main/res/layout/activity_pay_details.xml
+++ b/app/src/main/res/layout/activity_pay_details.xml
@@ -158,6 +158,7 @@
                         android:hint="cha@gmail.com"
                         android:textSize="16sp" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -179,10 +180,11 @@
                         android:layout_weight=".6"
                         android:gravity="center_vertical"
                         android:hint="..."
-                        android:textStyle="bold"
                         android:textColor="@android:color/holo_green_dark"
-                        android:textSize="16sp" />
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
                 </LinearLayout>
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -362,16 +364,32 @@
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
-
-    <Button
-        android:id="@+id/button_pay"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary"
-        android:text="PAY"
-        android:textColor="@android:color/white"
-        android:visibility="visible" />
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true">
+        <Button
+            android:id="@+id/check_smt_balance"
+            android:layout_width="0dp"
+            android:layout_weight=".6"
+            android:layout_height="45dp"
+            android:background="@color/design_default_color_secondary"
+            android:layout_alignParentRight="true"
+            android:textColor="@color/colorWhite"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:text="Fetch Smart Meter Balance"/>
+        <Button
+            android:id="@+id/button_pay"
+            android:layout_width="0dp"
+            android:layout_weight=".4"
+            android:layout_height="45dp"
+            android:background="@color/colorPrimary"
+            android:text="PAY -> "
+            android:textColor="@android:color/white"
+            android:visibility="visible" />
+    </LinearLayout>
+
 
 
 </RelativeLayout>
