--- a/app/src/main/res/xml/network_security_config.xml
+++ b/app/src/main/res/xml/network_security_config.xml
@@ -6,5 +6,6 @@
         <domain includeSubdomains="true">energyservices.bsphcl.co.in</domain>
         <domain includeSubdomains="true">energysmart.bsphcl.co.in</domain>
         <domain includeSubdomains="true">125.16.220.29</domain>
+        <domain includeSubdomains="true">1.6.61.111</domain>
     </domain-config>
 </network-security-config>
